feat: Implement word count, sorting, and pinning features
This commit introduces several quality-of-life enhancements to improve user productivity and organization within the notepad extension.

New Features:

-   **Word & Character Count:** A live-updating counter is now present in the editor's footer, providing immediate feedback on note length.
-   **Note Sorting:** A dropdown menu has been added to the sidebar, allowing users to sort their notes by:
    -   Date Created (Newest First - Default)
    -   Date Created (Oldest First)
    -   Title (Alphabetical, A-Z)
    The chosen sort order is saved and persists between sessions.
-   **Note Pinning:** Users can now pin important notes, which will stick to the top of the note list regardless of the current sort order. The pinned state is also saved.

Changes by File:

-   **`popup.html`**:
    -   Added `<select id="sortOrderSelect">` to the sidebar header for sorting options.
    -   Added `<div class="editor-footer">` with spans for word and character counts below the editor.
    -   Integrated Font Awesome CDN for the new pin icon.

-   **`style.css`**:
    -   Added styling for `.editor-footer`, `.sidebar-header`, `#sortOrderSelect`.
    -   Added styles for the `.pin-icon` and a `.pinned` class to visually distinguish pinned notes.

-   **`script.js`**:
    -   Implemented `updateWordCount()` function to calculate and display editor stats, called on `input` and on note load.
    -   Added `isPinned` property to the note object structure.
    -   Implemented `togglePin()` function and corresponding event listener.
    -   Created a `sortNotes()` function that handles all sorting logic, prioritizing pinned notes first. This is called before every list render.
    -   Added an event listener to the sort dropdown to update state, save preferences, and re-render the list.
    -   Updated data persistence to save and load the `sortOrder` preference.

--- a/popup.html
+++ b/popup.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <title>My Notepad</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Using Font Awesome for the pin icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
+        <!-- SIDEBAR -->
         <div class="sidebar">
-            <div class="search-container">
-                <input type="text" id="searchInput" placeholder="Search Notes..">
+            <div class="sidebar-header">
+                <input type="text" id="searchInput" placeholder="Search Notes...">
+                <select id="sortOrderSelect">
+                    <option value="date-desc">Sort: Newest First</option>
+                    <option value="date-asc">Sort: Oldest First</option>
+                    <option value="title-az">Sort: Title (A-Z)</option>
+                </select>
             </div>
             <div id="notesList" class="notes-list"></div>
             <div class="sidebar-footer">
                 <a href="#" id="recycleBinLink">Recycle Bin (<span id="deletedCount">0</span>)</a>
             </div>
         </div>
+        <!-- MAIN CONTENT -->
         <div class="main-content">
-            <div class="editor-toolbar">
+            <div class="top-controls">
+                <button id="deleteNoteBtn" title="Delete Note"><i class="fas fa-trash"></i></button>
+                <button id="newNoteBtn">New Note</button>
+            </div>
+            <div id="editorToolbar" class="editor-toolbar">
                 <button id="boldBtn" class="toolbar-btn"><i class="fas fa-bold"></i></button>
                 <button id="italicBtn" class="toolbar-btn"><i class="fas fa-italic"></i></button>
                 <button id="underlineBtn" class="toolbar-btn"><i class="fas fa-underline"></i></button>
@@ -31,9 +43,8 @@
                 <button id="olBtn" class="toolbar-btn"><i class="fas fa-list-ol"></i></button>
             </div>
             <div id="editor" class="editor" contenteditable="true"></div>
-            <div class="top-controls">
-                <button id="deleteNoteBtn"><i class="fas fa-trash"></i></button>
-                <button id="newNoteBtn">New Note</button>
+            <div class="editor-footer">
+                <span id="wordCount">Words: 0</span> | <span id="charCount">Characters: 0</span>
             </div>
         </div>
     </div>
