--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>My Notepad</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Using Font Awesome for the pin icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
@@ -30,19 +29,26 @@
                 <button id="deleteNoteBtn" title="Delete Note"><i class="fas fa-trash"></i></button>
                 <button id="newNoteBtn">New Note</button>
             </div>
-            <div id="editorToolbar" class="editor-toolbar">
-                <button id="boldBtn" class="toolbar-btn"><i class="fas fa-bold"></i></button>
-                <button id="italicBtn" class="toolbar-btn"><i class="fas fa-italic"></i></button>
-                <button id="underlineBtn" class="toolbar-btn"><i class="fas fa-underline"></i></button>
-                <button id="strikeBtn" class="toolbar-btn"><i class="fas fa-strikethrough"></i></button>
-                <button id="linkBtn" class="toolbar-btn"><i class="fas fa-link"></i></button>
-                <button id="alignLeftBtn" class="toolbar-btn"><i class="fas fa-align-left"></i></button>
-                <button id="alignCenterBtn" class="toolbar-btn"><i class="fas fa-align-center"></i></button>
-                <button id="alignRightBtn" class="toolbar-btn"><i class="fas fa-align-right"></i></button>
-                <button id="ulBtn" class="toolbar-btn"><i class="fas fa-list-ul"></i></button>
-                <button id="olBtn" class="toolbar-btn"><i class="fas fa-list-ol"></i></button>
+            
+            <div class="note-editor-container">
+                <input type="text" id="noteTitleInput" placeholder="Note Title...">
+                
+                <div id="editorToolbar" class="editor-toolbar">
+                    <button id="boldBtn" class="toolbar-btn"><i class="fas fa-bold"></i></button>
+                    <button id="italicBtn" class="toolbar-btn"><i class="fas fa-italic"></i></button>
+                    <button id="underlineBtn" class="toolbar-btn"><i class="fas fa-underline"></i></button>
+                    <button id="strikeBtn" class="toolbar-btn"><i class="fas fa-strikethrough"></i></button>
+                    <button id="linkBtn" class="toolbar-btn"><i class="fas fa-link"></i></button>
+                    <button id="alignLeftBtn" class="toolbar-btn"><i class="fas fa-align-left"></i></button>
+                    <button id="alignCenterBtn" class="toolbar-btn"><i class="fas fa-align-center"></i></button>
+                    <button id="alignRightBtn" class="toolbar-btn"><i class="fas fa-align-right"></i></button>
+                    <button id="ulBtn" class="toolbar-btn"><i class="fas fa-list-ul"></i></button>
+                    <button id="olBtn" class="toolbar-btn"><i class="fas fa-list-ol"></i></button>
+                </div>
+
+                <div id="editor" class="editor" contenteditable="true"></div>
             </div>
-            <div id="editor" class="editor" contenteditable="true"></div>
+
             <div class="editor-footer">
                 <span id="wordCount">Words: 0</span> | <span id="charCount">Characters: 0</span>
             </div>
