--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
         <!-- MAIN CONTENT -->
         <div class="main-content">
             <div class="top-controls">
+                <button id="themeToggleBtn" title="Toggle Theme"><i class="fas fa-palette"></i></button>
                 <button id="deleteNoteBtn" title="Delete Note"><i class="fas fa-trash"></i></button>
                 <button id="newNoteBtn">New Note</button>
             </div>
@@ -50,6 +51,7 @@
             </div>
 
             <div class="editor-footer">
+                <span id="lastSaved"></span>
                 <span id="wordCount">Words: 0</span> | <span id="charCount">Characters: 0</span>
             </div>
         </div>
