fix(layout): enforce fixed height to prevent window resizing
The main popup window would expand vertically when its inner content (specifically the text editor) grew larger than the visible area. This created a jarring user experience and broke the intended fixed-size design.
This change introduces several key CSS rules to create a truly stable and locked layout:
The body and .container now have a strict, non-expandable height.
min-height: 0 is applied to the .main-content flex container, which is a crucial fix that allows its child elements (the editor) to calculate overflow and scroll correctly.
Also disables the browser's native spellcheck on the editor to remove distracting red underlines on non-dictionary words (like mantras or code).
With these changes, the popup will now maintain its 750x550 dimensions under all content conditions.

--- a/popup.html
+++ b/popup.html
@@ -46,13 +46,16 @@
                     <button id="ulBtn" class="toolbar-btn"><i class="fas fa-list-ul"></i></button>
                     <button id="olBtn" class="toolbar-btn"><i class="fas fa-list-ol"></i></button>
                 </div>
-
-                <div id="editor" class="editor" contenteditable="true"></div>
+                
+                <!-- THE FIXES ARE HERE -->
+                <div id="editor" class="editor" contenteditable="true" spellcheck="false"></div>
             </div>
 
             <div class="editor-footer">
                 <span id="lastSaved"></span>
-                <span id="wordCount">Words: 0</span> | <span id="charCount">Characters: 0</span>
+                <span class="editor-stats">
+                    <span id="wordCount">Words: 0</span> | <span id="charCount">Characters: 0</span>
+                </span>
             </div>
         </div>
     </div>
