--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,7 @@
         <div class="main-content">
             <div class="top-controls">
                 <button id="themeToggleBtn" title="Toggle Theme"><i class="fas fa-palette"></i></button>
+                <button id="screenshotBtn" title="Capture Screenshot"><i class="fas fa-camera"></i></button>
                 <button id="exportNoteBtn" title="Export Note"><i class="fas fa-file-export"></i></button>
                 <button id="deleteNoteBtn" title="Delete Note"><i class="fas fa-trash"></i></button>
                 <button id="newNoteBtn">New Note</button>
